stylesheets/styles.css
@import url(http://fonts.googleapis.com/css?family=Belgrano);

body {
  padding: 0px 0 20px 0px;
  margin: 0px;
  font: 7vh/1.7 "Belgrano", serif;
  color: #fff;
  font-weight: normal;
  background: #000;
}

section {
  height: 90vh;
  padding: 5vh;
  overflow: hidden;
  background: #40555C;
}

h1, h2, h3, h4, h5, h6 {
  color: #fff;
  margin: 0 0 2vh;
  font-family: "Belgrano", serif;
  font-weight: normal;
  text-shadow: 5px 5px 0 rgba(0, 0, 0, 0.5);
}

p, ul, ol, table, pre, dl {
  margin: 0 0 4vh;
  color: #dbebff;
}

h1, h2, h3 {
  line-height: 1.1;
}

h1 {
  font-size: 16vh;
}

h2 {
  font-size: 10vh;
}

a {
  color: #fff;
}

a:hover {
  background-color: rgba(0, 0, 0, 0.1);
}

strong {
  color: #ffcc00;
  font-family: "Belgrano", serif !important;
  font-weight: normal;
  text-shadow: 3px 3px 0 rgba(0, 0, 0, 0.5);
}

q:before {
  opacity: 0.5;
  content: "“";
}

q:after {
  opacity: 0.5;
  content: "”";
}

strike {
  opacity: 0.5;
}

code {
  font-family: Monaco, Bitstream Vera Sans Mono, Lucida Console, Terminal;
}

pre {
  font-size: 70%;
  padding: 3vh;
  background: #fff;
  box-shadow: 8px 8px 0px 0 rgba(0, 0, 0, 0.3);
  color: #333;
  overflow: auto;
  overflow-y: hidden;
  margin: 0 0 4vh;
}

section.clay { background: #AB3F31; }
section.clay p, section.clay ul, section.clay ol  { color: #ffebcb;}
section.clay strong { color: #ffcc00; }

section.mold { background: #449F78; }
section.mold p, section.mold ul, section.mold ol { color: #dbffdb;}
section.mold strong { color: #ccff00; }

section.purple { background: #55417E; }
section.purple p, section.purple ul, section.purple ol { color: #d5b1fe;}
section.purple strong { color: #bb22ff; }

section.slate { background: #40555C; }
section.slate p, section.slate ul, section.slate ol { color: #dbebff;}
section.slate strong { color: #00ccff; }

